--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+
+    <title>ReeBooT - Faculty Hackathon | BMSIT&M IEEE</title>
+
+
+    <meta name="description" content="ReeBooT is a faculty-focused hackathon organized by IEEE at BMSIT&M to foster innovation and collaboration." />
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    
+
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
