--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
 
-    <title>ReeBooT - Faculty Hackathon | BMSIT&M IEEE</title>
+    <title>ReBooT - Faculty Hackathon | BMSIT&M IEEE</title>
 
 
     <meta name="description" content="ReeBooT is a faculty-focused hackathon organized by IEEE at BMSIT&M to foster innovation and collaboration." />
